# brasilapy

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  LICENSE  README.md  __init__.py  main.py  mypy.ini  pyproject.toml  setup.py  sonar-project.properties  test-data.xml
.github/workflows/: cicd.yaml  deploy.yaml  project-preparation.yaml  project-validation.yaml  tests.yaml
brasilapy/: __init__.py  client.py  constants.py  exceptions.py  models.py  processor.py  utils.py
brasilapy/models/: cnpj.py  general.py
src/: __init__.py  main.py
src/adapters/: __init__.py  routes_adapter.py  string_formatter.py
src/dtos/: __init__.py  api_response.py
src/entities/: __init__.py  api_get_route.py
src/errors/: __init__.py  parameter_exception.py  route_not_found.py
src/interfaces/: __init__.py  adapter_interface.py  route_interface.py
tests/: conftest.py  test_banks.py  test_base.py  test_processor.py  test_utils.py
tests/banks/: conftest.py  test_banks.py
tests/cep/: conftest.py  test_cep.py
tests/cnpj/: conftest.py  test_cnpj.py
tests/corretoras/: conftest.py  test_corretoras.py
tests/ddd/: conftest.py  test_ddd.py
tests/feriados/: conftest.py  test_feriados.py
tests/fipe/: conftest.py  test_fipe.py
tests/ibge/: conftest.py  test_ibge.py
tests/ncm/: conftest.py  test_ncms.py
tests/registro_br/: conftest.py  test_registro_br.py
tests/taxas/: conftest.py  test_taxas.py
