[tool.poetry]
name = "brasilapy"
version = "1.2.2"
description = "Brasil API Client for Python"
authors = ["Filipe Soares <fn697169@gmail.com>", "Jonhnatha Trigueiro <joepreludian@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "brasilapy" }
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
types-requests = "^2.28.11"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
